fix invisible sliders in non-overlay scrollbars (#294)
* fix: not all scrollbar classes have visible slider

For now slider background is found only for
 .overlay-indicator scrollbar subclass.

* Fix indentation

* ooops! unrelated experiment leak

* No need to dublicate changes in dark version

* Make final result easier to maintain

* Even more laconic definition for scrollbar slider

Same result as before, but in less lines.
After all, we don't need scrollbar sliders with undefined background.

--- a/gtk-3.22/gtk-widgets.css
+++ b/gtk-3.22/gtk-widgets.css
@@ -1738,11 +1738,6 @@ scrollbar button {
     background-color: transparent;
 }
 
-scrollbar slider {
-    margin: 1px;
-    transition: all 200ms ease-in-out;
-}
-
 scrollbar.horizontal slider {
     min-width: 30px;
     min-height: 3px;
@@ -1761,10 +1756,12 @@ scrollbar.vertical:hover slider {
     min-width: 8px;
 }
 
-scrollbar.overlay-indicator slider {
-    border: 1px solid alpha (@bg_highlight_color, 0.25);
+scrollbar slider {
     background-color: alpha (@text_color, 0.6);
+    border: 1px solid alpha (@bg_highlight_color, 0.25);
     border-radius: 10px;
+    margin: 1px;
+    transition: all 200ms ease-in-out;
 }
 
 scrollbar.overlay-indicator slider:hover {
